<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.apache.oozie.test</groupId>
    <artifactId>oozie-workflowtest</artifactId>
    <packaging>jar</packaging>
    <version>0.1-SNAPSHOT</version>
    <name>Oozie Workflow Test</name>
    <url>http://maven.apache.org</url>

    <properties>
        <oozie.version>4.0.0-cdh5.3.8</oozie.version>
        <minicluster.version>0.1.3</minicluster.version>
        <property-parser.version>0.0.2</property-parser.version>
    </properties>

    <repositories>
        <repository>
            <id>cloudera</id>
            <url>https://repository.cloudera.com/artifactory/cloudera-repos/</url>
        </repository>
    </repositories>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.10</version>
                <configuration>
                    <argLine>-Dhdp.release.version=2.3.0.0 -XX:MaxPermSize=256M -XX:-UseSplitVerifier</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                </configuration>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>workflows</directory>
            </resource>
        </resources>
    </build>

    <dependencies>
        <!-- Oozie -->
        <dependency>
            <groupId>org.apache.oozie.test</groupId>
            <artifactId>oozie-mini</artifactId>
            <version>${oozie.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.oozie</groupId>
            <artifactId>oozie-core</artifactId>
            <version>${oozie.version}</version>
            <type>test-jar</type>
        </dependency>

        <dependency>
            <groupId>org.apache.oozie</groupId>
            <artifactId>oozie-core</artifactId>
            <version>${oozie.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.oozie</groupId>
            <artifactId>oozie-tools</artifactId>
            <version>${oozie.version}</version>
        </dependency>

        <!-- Hadoop Mini Clusters Common -->
        <dependency>
            <groupId>com.github.sakserv</groupId>
            <artifactId>hadoop-mini-clusters-common</artifactId>
            <version>${minicluster.version}</version>
            <scope>test</scope>
        </dependency>

        <!-- HDFS Mini Cluster -->
        <dependency>
            <groupId>com.github.sakserv</groupId>
            <artifactId>hadoop-mini-clusters-hdfs</artifactId>
            <version>${minicluster.version}</version>
            <scope>test</scope>
        </dependency>

        <!--Oozie Mini Cluster -->
        <dependency>
            <groupId>com.github.sakserv</groupId>
            <artifactId>hadoop-mini-clusters-oozie</artifactId>
            <version>${minicluster.version}</version>
            <scope>test</scope>
        </dependency>

        <!-- MR Mini Cluster -->
        <dependency>
            <groupId>com.github.sakserv</groupId>
            <artifactId>hadoop-mini-clusters-mapreduce</artifactId>
            <version>${minicluster.version}</version>
            <scope>test</scope>
        </dependency>

        <!-- Property parser -->
        <dependency>
            <groupId>com.github.sakserv</groupId>
            <artifactId>property-parser</artifactId>
            <version>${property-parser.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.11</version>
            <scope>test</scope>
        </dependency>

    </dependencies>
</project>
